<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tasks"
            android:icon="@drawable/taskicon"
            android:title="@string/tasks" />
        <item
            android:id="@+id/tags"
            android:icon="@drawable/tagicon"
            android:title="@string/tags" />
        <item
            android:id="@+id/timer"
            android:checked="true"
            android:icon="@drawable/clockicon"
            android:title="@string/timer" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profileicon"
            android:title="@string/profile" />
    </group>

</menu>